fixed hero positioning on mobile

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -43,10 +43,10 @@
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 
-    // @include respond(phone) {
-    //   -ms-transform: translateY(-75%);
-    //   transform: translateY(-75%);
-    // }
+    @include respond(phone) {
+      -ms-transform: translateY(-20%);
+      transform: translateY(-20%);
+    }
   }
 
   .hero-title {
